# scrubber-project

./: .gitignore  Desktop_Wiping.py  FT_data_calibration.py  README.md  constant_force_tracking_control.py  desktop_wiping_interface.py  eg.py  force_sensor_drag_teach.py  get_csv_position_and_inter.py  get_csv_position_and_interpolation.py  get_current_joint_position.py  hybrid_force_movec_to_target_postion.py  hybrid_force_movel_to_target_postion.py  lcm_handler.py  movec_to_target_position.py  movej_to_target_position.py  movel_to_target_position.py  my.csv  my1.csv  offline_say_hi_05_1105_new.csv  plot_left_arm_FT_original_MAF_compensation_base_coordinate_system.py  plot_right_arm_FT_original_MAF_compensation_base_coordinate_system.py  robot_model.py  send_FT_sim_data.py  set_robot_fsm.py  test_IK.py  test_interface.py  test_scrubber.py  torque_mode_zero_force_drag.py
convert_lcm_to_ros/install/lcm2ros/share/lcm2ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
convert_lcm_to_ros/install/lcm2ros/share/lcm2ros/cmake/: lcm2rosConfig.cmake
convert_lcm_to_ros/src/: CMakeLists.txt
convert_lcm_to_ros/src/scripts/: lcm2ros.py
dynamics_related_functions/: collision_detection.py  impedance_control.py  zero_force_drag.py
force_control/: force_control.py  force_control_data_cal.py
hybrid_force_and_pos_control/: hybrid_force_movec.py  hybrid_force_movel.py
lcm_data_structure/: ecat_debug_ft_data_lcmt.py  lcm_command_struct.py  lcm_command_struct.py_bak  lcm_response_lcmt.py  lcm_response_lcmt.py_bak  upper_body_cmd_package.py  upper_body_data_package.py
meshes/: LINK_ANKLE_PITCH_L.STL  LINK_ANKLE_PITCH_R.STL  LINK_ANKLE_ROLL_L.STL  (+28 more)
(+23 files in other folders)
