<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lcm2ros</name>  <!-- 功能包名称，可自定义 -->
  <version>0.0.0</version>
  <description>Convert LCM upper_body_cmd_package to ROS2 JointState</description>
  <maintainer email="1104459253@qq.com">wangjingyun</maintainer>
  <license>Apache-2.0</license>

  <!-- 依赖项 -->
  <depend>rclpy</depend>                <!-- ROS2 Python客户端库 -->
  <depend>sensor_msgs</depend>          <!-- 包含JointState消息类型 -->
  <depend>std_msgs</depend>             <!-- 基础消息类型依赖 -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>python3-lcm</exec_depend>  <!-- LCM Python库 -->

  <build_depend>ament_cmake</build_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>